...
                          fontSize: 24,
                          fontWeight: FontWeight.w700,
                        ),
                      ),
                      const SizedBox(height: 20),
                      RoundTextField(
                        key: Key("text_input_name"),
                        controller: txtFirstName,
                        hintText: "First & Last Name",
                      ),
                      const SizedBox(height: 15),
                      RoundTextField(
                        key: Key("text_input_email"),
                        controller: txtEmail,
                        hintText: "Email Address",
                        keyboardType: TextInputType.emailAddress,
                      ),
                      const SizedBox(height: 15),
                      const SizedBox(height: 15),
                      RoundTextField(
                        key: Key("text_input_phone"),
                        controller: txtMobile,
                        hintText: "Mobile Phone",
                        keyboardType: TextInputType.phone,
                      ),
                      const SizedBox(height: 15),
                      RoundTextField(
                        key: Key("text_input_password"),
                        controller: txtPassword,
                        hintText: "Password",
                        obscureText: true,
                      ),
                      const SizedBox(height: 15),
                      Row(
...
                          //   }
                          // }),
                          const SizedBox(width: 15),
                        ],
                      ),
                      RoundLineButton(
                        key: const Key("sign up"),
                        title: "Sign Up",
                        onPressed:
                            () => handleSignUp(
                              context: context,
                              fullName: txtFirstName.text.trim(),
                              email: txtEmail.text.trim(),
...
