...
                              Navigator.pop(context);
                            },
                            icon: Icon(Icons.arrow_back_ios, color: TColor.showMessage),
                          ),
                          actions: [
                            IconButton(
                              key: const Key("menu"),
                              onPressed: () {
                                sideMenuScaffoldKey.currentState?.openEndDrawer();
                              },
                              icon: const Icon(Icons.menu, size: 30),
                            ),
                          ],
...
